Полное внедрение макета основного сайта.

--- a/Electro.WebApplication/Views/Shared/IconPartial.cshtml
+++ b/Electro.WebApplication/Views/Shared/IconPartial.cshtml
@@ -1,1 +1,2 @@
-﻿<link rel="shortcut icon" href="~/img/logos/favicon.png">
+﻿<!-- Favicon -->
+<link rel="shortcut icon" href="~/img/logos/favicon.png">
