--- a/Electro.WebApplication/Views/Shared/Header/LogoSearchHeaderIconsPartial.cshtml
+++ b/Electro.WebApplication/Views/Shared/Header/LogoSearchHeaderIconsPartial.cshtml
@@ -7,7 +7,7 @@
                 <!-- Nav -->
                 <nav class="navbar navbar-expand u-header__navbar py-0 justify-content-xl-between max-width-270 min-width-270">
                     <!-- Logo -->
-                    <a class="order-1 order-xl-0 navbar-brand u-header__navbar-brand u-header__navbar-brand-center" href="../home/index.html" aria-label="Electro">
+                    <a class="order-1 order-xl-0 navbar-brand u-header__navbar-brand u-header__navbar-brand-center" asp-area="" asp-controller="Home" asp-action="Index" aria-label="Electro">
                         <svg version="1.1" x="0px" y="0px" width="175.748px" height="42.52px" viewBox="0 0 175.748 42.52" enable-background="new 0 0 175.748 42.52" style="margin-bottom: 0;">
                             <ellipse class="ellipse-bg" fill-rule="evenodd" clip-rule="evenodd" fill="#FDD700" cx="170.05" cy="36.341" rx="5.32" ry="5.367"></ellipse>
                             <path fill-rule="evenodd" clip-rule="evenodd" fill="#333E48" d="M30.514,0.71c-0.034,0.003-0.066,0.008-0.056,0.056
@@ -94,7 +94,7 @@
                                 <div class="js-scrollbar u-sidebar__body">
                                     <div id="headerSidebarContent" class="u-sidebar__content u-header-sidebar__content">
                                         <!-- Logo -->
-                                        <a class="navbar-brand u-header__navbar-brand u-header__navbar-brand-center mb-3" href="index.html" aria-label="Electro">
+                                        <a class="navbar-brand u-header__navbar-brand u-header__navbar-brand-center mb-3" asp-area="" asp-controller="Home" asp-action="Index" aria-label="Electro">
                                             <svg version="1.1" x="0px" y="0px" width="175.748px" height="42.52px" viewBox="0 0 175.748 42.52" enable-background="new 0 0 175.748 42.52" style="margin-bottom: 0;">
                                                 <ellipse class="ellipse-bg" fill-rule="evenodd" clip-rule="evenodd" fill="#FDD700" cx="170.05" cy="36.341" rx="5.32" ry="5.367"></ellipse>
                                                 <path fill-rule="evenodd" clip-rule="evenodd" fill="#333E48" d="M30.514,0.71c-0.034,0.003-0.066,0.008-0.056,0.056
