--- a/Electro.WebApplication/Views/Shared/Components/Header/Topbar/AccountSidebarToggleButton/Default.cshtml
+++ b/Electro.WebApplication/Views/Shared/Components/Header/Topbar/AccountSidebarToggleButton/Default.cshtml
@@ -1,15 +1,12 @@
 ﻿<!-- Account Sidebar Toggle Button -->
-<a id="sidebarNavToggler" href="javascript:;" role="button" class="u-header-topbar__nav-link"
-   aria-controls="sidebarContent"
-   aria-haspopup="true"
-   aria-expanded="false"
-   data-unfold-event="click"
-   data-unfold-hide-on-scroll="false"
-   data-unfold-target="#sidebarContent"
-   data-unfold-type="css-animation"
-   data-unfold-animation-in="fadeInRight"
-   data-unfold-animation-out="fadeOutRight"
-   data-unfold-duration="500">
-    <i class="ec ec-user mr-1"></i> Register <span class="text-gray-50">or</span> Sign in
+<a href="javascript:;" role="button" class="u-header-topbar__nav-link">
+    <i class="ec ec-user mr-1"></i>
+    <span>
+        <a asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+    </span>
+    <span class="text-gray-50"> or </span>
+    <span>
+        <a asp-area="" asp-controller="Account" asp-action="Login">Sign in</a>
+    </span>
 </a>
 <!-- End Account Sidebar Toggle Button -->
