--- a/Electro.WebApplication/Areas/Admin/Views/Shared/SidebarPartial.cshtml
+++ b/Electro.WebApplication/Areas/Admin/Views/Shared/SidebarPartial.cshtml
@@ -37,5 +37,13 @@
                 <div class="menu-title">Категории</div>
             </a>
         </li>
+        <li>
+            <a asp-area="Admin" asp-controller="Manufacturers" asp-action="Index">
+                <div class="parent-icon">
+                    <i class="bx bx-cog"></i>
+                </div>
+                <div class="menu-title">Производители</div>
+            </a>
+        </li>
     </ul>
 </div>
