--- a/Electro.WebApplication/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Electro.WebApplication/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
-﻿@using Electro.WebApplication.Models
+﻿@using Electro.Model.Database.Entities
+@using Electro.WebApplication.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
