Реализованы CRUD операции со сущностью "Unit". Исправление багов.

--- a/Electro.WebApplication/Areas/Admin/Views/Shared/SidebarPartial.cshtml
+++ b/Electro.WebApplication/Areas/Admin/Views/Shared/SidebarPartial.cshtml
@@ -45,5 +45,13 @@
                 <div class="menu-title">Производители</div>
             </a>
         </li>
+        <li>
+            <a asp-area="Admin" asp-controller="Units" asp-action="Index">
+                <div class="parent-icon">
+                    <i class="bx bx-ruler"></i>
+                </div>
+                <div class="menu-title">Единицы измерения</div>
+            </a>
+        </li>
     </ul>
 </div>
