Реализованы CRUD операции со сущностью "Quantity". Исправление багов.

--- a/Electro.WebApplication/Areas/Admin/Views/Shared/SidebarPartial.cshtml
+++ b/Electro.WebApplication/Areas/Admin/Views/Shared/SidebarPartial.cshtml
@@ -46,6 +46,14 @@
             </a>
         </li>
         <li>
+            <a asp-area="Admin" asp-controller="Quantities" asp-action="Index">
+                <div class="parent-icon">
+                    <i class="bx bx-atom"></i>
+                </div>
+                <div class="menu-title">Величины</div>
+            </a>
+        </li>
+        <li>
             <a asp-area="Admin" asp-controller="Units" asp-action="Index">
                 <div class="parent-icon">
                     <i class="bx bx-ruler"></i>
