--- a/Electro.WebApplication/Areas/Admin/Views/Units/Save.cshtml
+++ b/Electro.WebApplication/Areas/Admin/Views/Units/Save.cshtml
@@ -40,6 +40,13 @@
                                 </div>
                             </div>
                             <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Обозначение</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" asp-for="Designation">
+                                    <span class="invalid-feedback" style="display: block;" asp-validation-for="Designation"></span>
+                                </div>
+                            </div>
+                            <div class="form-group row">
                                 <label class="col-sm-2 col-form-label"></label>
                                 <div class="col-sm-10">
                                     <input type="submit" class="btn btn-light px-4" value="Сохранить" />
