Реализованы CRUD операции со сущностью "SectionCharacteristic".

--- a/Electro.WebApplication/Areas/Admin/Views/Shared/SidebarPartial.cshtml
+++ b/Electro.WebApplication/Areas/Admin/Views/Shared/SidebarPartial.cshtml
@@ -61,5 +61,13 @@
                 <div class="menu-title">Единицы измерения</div>
             </a>
         </li>
+        <li>
+            <a asp-area="Admin" asp-controller="SectionsCharacteristics" asp-action="Index">
+                <div class="parent-icon">
+                    <i class="bx bx-menu"></i>
+                </div>
+                <div class="menu-title">Разделы характеристик</div>
+            </a>
+        </li>
     </ul>
 </div>
