--- a/Electro.WebApplication/Areas/Admin/Views/Shared/SidebarPartial.cshtml
+++ b/Electro.WebApplication/Areas/Admin/Views/Shared/SidebarPartial.cshtml
@@ -62,6 +62,14 @@
             </a>
         </li>
         <li>
+            <a asp-area="Admin" asp-controller="Characteristics" asp-action="Index">
+                <div class="parent-icon">
+                    <i class="bx bx-menu"></i>
+                </div>
+                <div class="menu-title">Характеристики</div>
+            </a>
+        </li>
+        <li>
             <a asp-area="Admin" asp-controller="SectionsCharacteristics" asp-action="Index">
                 <div class="parent-icon">
                     <i class="bx bx-menu"></i>
