--- a/Electro.WebApplication/Areas/Admin/Views/SectionsCharacteristics/Save.cshtml
+++ b/Electro.WebApplication/Areas/Admin/Views/SectionsCharacteristics/Save.cshtml
@@ -2,8 +2,8 @@
 @section StylePage
 {
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" asp-append-version="true" />
-    <link rel="stylesheet" type="text/css" href="~/plugins/select2/css/select2-bootstrap4.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="~/plugins/select2/css/select2.min.css" asp-append-version="true" />
+    <link rel="stylesheet" type="text/css" href="~/plugins/select2/css/select2-bootstrap4.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="~/css/custom.css" asp-append-version="true" />
 }
 @{
@@ -69,7 +69,7 @@
                             <div class="form-group row">
                                 <label class="col-sm-2 col-form-label">Категории</label>
                                 <div class="col-sm-10">
-                                    <select class="multiple-select w-100" data-placeholder="Выбирайте что угодно" asp-for="@Model.SelectedCategories" multiple="multiple">
+                                    <select id="multiple-select-categories" class="multiple-select" data-placeholder="Выбирайте что угодно" asp-for="@Model.SelectedCategories" multiple="multiple">
                                         @if (Model.UsedCategories != null)
                                         {
                                             @foreach (var category in Model.UsedCategories)
@@ -104,7 +104,8 @@
 {
     <script src="~/plugins/select2/js/select2.min.js" asp-append-version="true"></script>
     <script>
-        $('.multiple-select').select2({
+        $('.multiple-select-categories').select2({
+            width: '100%',
             theme: 'bootstrap4',
             placeholder: $(this).data('placeholder'),
             allowClear: Boolean($(this).data('allow-clear')),
