--- a/Electro.WebApplication/Areas/Admin/Views/Shared/_ScriptsPartial.cshtml
+++ b/Electro.WebApplication/Areas/Admin/Views/Shared/_ScriptsPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿<script src="~/js/jquery.min.js" asp-append-version="true"></script>
+<script src="~/lib/jquery.unobtrusive-ajax.min.js" asp-append-version="true"></script>
 <script src="~/js/popper.min.js" asp-append-version="true"></script>
 <script src="~/js/bootstrap.min.js" asp-append-version="true"></script>
 <script src="~/plugins/simplebar/js/simplebar.min.js" asp-append-version="true"></script>
