--- a/Electro.WebApplication/Areas/Admin/Views/Characteristics/Save.cshtml
+++ b/Electro.WebApplication/Areas/Admin/Views/Characteristics/Save.cshtml
@@ -20,9 +20,12 @@
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb mb-0 p-0">
                             <li class="breadcrumb-item">
-                                <a href="javascript:;"><i class='bx bx-home-alt'></i></a>
+                                <a asp-area="Admin" asp-controller="Home" asp-action="Index"><i class='bx bx-home-alt'></i></a>
                             </li>
-                            <li class="breadcrumb-item active" aria-current="page">Характеристики</li>
+                            <li class="breadcrumb-item">
+                                <a asp-area="Admin" asp-controller="Characteristics" asp-action="Index">Характеристики</a>
+                            </li>
+                            <li class="breadcrumb-item active" aria-current="page">Сохранение характеристики</li>
                         </ol>
                     </nav>
                 </div>
