--- a/Electro.WebApplication/Areas/Admin/Views/Units/Save.cshtml
+++ b/Electro.WebApplication/Areas/Admin/Views/Units/Save.cshtml
@@ -16,9 +16,12 @@
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb mb-0 p-0">
                             <li class="breadcrumb-item">
-                                <a href="javascript:;"><i class='bx bx-home-alt'></i></a>
+                                <a asp-area="Admin" asp-controller="Home" asp-action="Index"><i class='bx bx-home-alt'></i></a>
                             </li>
-                            <li class="breadcrumb-item active" aria-current="page">Единицы измерения</li>
+                            <li class="breadcrumb-item">
+                                <a asp-area="Admin" asp-controller="Units" asp-action="Index">Единицы измерения</a>
+                            </li>
+                            <li class="breadcrumb-item active" aria-current="page">Сохранение eдиницы измерения</li>
                         </ol>
                     </nav>
                 </div>
